# fastauth

./: FEATURES.md  README.md  TODO.md  pyproject.toml  pytest.ini
docs/: index.md  support.md
examples/: main.py
src/fastauth/: __init__.py  audit.py  crypto.py  exceptions.py  utils.py
src/fastauth/api/: dependencies.py  router.py
src/fastauth/auth/: config.py  manager.py  models.py  types.py
src/fastauth/authorization/: __init__.py  base.py  dependencies.py  engine.py
src/fastauth/authorization/stores/: __init__.py  memory.py  sql.py
src/fastauth/core/: config.py  manager.py  models.py
src/fastauth/oauth/: base.py  registry.py
src/fastauth/sessions/: __init__.py  base.py  db.py  memory.py  redis.py  sql.py
src/fastauth/strategies/: __init__.py  base.py  jwt.py  opaque.py
src/fastauth/strategy/: base.py  jwt.py  opaque.py
src/fastauth/tokens/: base.py  jwt.py
src/fastauth/users/: base.py
tests/: README.md  conftest.py  test_flexible_schema.py
tests/unit/api/: test_dependencies.py  test_router.py
tests/unit/auth/: test_config.py  test_flexible_schema.py  test_manager.py
tests/unit/authorization/: test_authorization_config.py  test_combined.py  test_engine.py  test_stores.py
tests/unit/sessions/: test_db.py  test_memory.py  test_redis.py
tests/unit/strategies/: test_jwt.py  test_opaque.py
tests/unit/utils/: test_utils.py
