[project]
name = "fastauth"
version = "0.1.0"
description = "A ready-to-use, customizable solution for FastAPI with Authentication, Authorization (RBAC), and OAuth2 support. This solution provides token based or cookie based authentication(JWT, Redis, DB), role-based access control, and OAuth2 integration."
readme = "README.md"
authors = [
    { name = "Pramoda-S-R", email = "pramoda9.2.2004@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.125.0",
]

[build-system]
requires = ["uv_build>=0.9.7,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "isort>=7.0.0",
    "ruff>=0.14.9",
]
